# the-honored-solver

./: .gitignore  Cargo.toml  README.md  flake.nix  pixi.toml
macros/src/: lib.rs
solver/: Cargo.toml
solver/src/: cli.rs  logging.rs  main.rs
solver/src/algorithms/: mod.rs
solver/src/algorithms/exploration/: mod.rs  recursive_backtracker.rs  traits.rs  wall_follower.rs
solver/src/algorithms/pathfinding/: astar.rs  dfs.rs  dijkstra.rs  mod.rs  traits.rs
solver/src/maze/: bounded.rs  cell.rs  mod.rs  position.rs  unbounded.rs
solver/src/ros/: interface.rs  mod.rs  types.rs
solver/src/solvers/: blind.rs  mod.rs  omniscient.rs
src/: main.rs
src/utils/: cli.rs  log.rs
