[package]
name = "the-honored-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
colog = "1.4.0"
colored = "3.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
r2r = "0.9.5"
